--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.airbnb.android:lottie:3.4.1'
+    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
 
 
